--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ env:
   - DB=mysql
 
 before_install:
-  - sudo apt-get update -qq
+  - sudo apt-get upgrade -qq
   - sudo apt-get install memcached -y -qq
   - sudo /etc/init.d/memcached start
   - composer self-update
