--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,10 @@ services:
   - redis-server
 
 before_install:
+  - sudo apt-get install memcached -y -qq
+  - sudo apt-get install redis -y -qq
   - sudo /etc/init.d/memcached start
-  - sudo /etc/init.d/redis start
+  - sudo /etc/init.d/memcached start
 #  - composer self-update
 #  - composer install --prefer-source --no-interaction --dev
 
