--- a/.travis.yml
+++ b/.travis.yml
@@ -9,12 +9,11 @@ env:
 
 services:
   - redis-server
+  - memcached
 
 before_install:
-  - sudo apt-get install memcached -y -qq
-  - sudo apt-get install redis -y -qq
-  - sudo /etc/init.d/memcached start
-  - sudo /etc/init.d/memcached start
+#  - sudo apt-get install memcached -y -qq
+#  - sudo /etc/init.d/memcached start
 #  - composer self-update
 #  - composer install --prefer-source --no-interaction --dev
 
