--- a/.sensiolabs.yml
+++ b/.sensiolabs.yml
@@ -9,3 +9,6 @@ rules:
   enabled: false
  git.user_specific_ignored_file:
   enabled: false
+ php.neglected_tests:
+  enabled: false
+# the above rule should remove the false positive. All files are loaded via the phpunit.php bootstrap file.
