--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ php:
   - 5.6
   - 5.5
   - 5.4
+  -- hhvm
 env:
   - DB=mysql
 
@@ -27,3 +28,5 @@ notifications:
 
 matrix:
   fast_finish: true
+  allow_failures:
+   - php: hhvm
